--- a/面试题/js/19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别.md
+++ b/面试题/js/19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别.md
@@ -1,9 +1,15 @@
 # JS 垃圾回收和 v8 的垃圾回收机制有什么区别
 
+## 为什么又
+程序的运行过程中，会使用内存。而内存空间是有限的，因此，内存空间的重复利用就变得非常重要。垃圾回收的概念也因此而生。
 ## 什么是垃圾回收
 
 js 垃圾回收是自动的，非手动释放，也叫自动内存管理。
 当环境中的变量，不再使用（没有被引用的关系），则在在下一波清理过程中被回收
+
+### 常用的方式
+引用计数法
+缺点：无法解决循环引用问题
 
 ## V8
 
