--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -34,7 +34,7 @@
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
-- ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数
+- 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数 大数、小树
 - ✅ 33 RAF 和 RIC 是什么
 - ✅ 34.a===1&&a===2&&a===3 为 true
 - ES6 中 set、map、weakMap 的区别, Set 的用法，用 Set 实现数组去重
@@ -42,6 +42,9 @@
 - var 怎么实现let
 - 进程通信的几种方式
 - isNaN 和 number.isNaN 区别
+- 二进制
+- 随机数
+- 位运算
 
 # HTTP
 
@@ -91,6 +94,10 @@
 - ✅ 14.css3 属性
 - ✅ 15.css 中的 px，rem，em，vw，vh
 - ✅ 16.伪元素 ::before 与伪类 :first-child 的区别
+box-sizing 宽高计算
+为什么 marign 0 auto 无法垂直居中
+控制 z-index 的规则有哪些
+元素替换概念有了解吗？
 
 # TS
 
@@ -209,6 +216,6 @@ http://muyiy.cn/question/js/2.html
 https://juejin.cn/post/7028478428680552456#heading-40
 
 
-- [飞书](https://bitable.feishu.cn/app8Ok6k9qafpMkgyRbfgxeEnet?from=logout&table=tblzZHf2Ix3YtxPM&view=vew9iquA45)
+- [飞书](https://m26bxrpatp.feishu.cn/base/appcn5mUun8tTLsaFG0jrTeUnBg?table=tbllAUETZhGVTWMA&view=vewJHSwJVd)
 
 https://mp.weixin.qq.com/s/RJxR9Fsbv8oTl6GXWY4oaQ
