--- a/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
+++ b/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
@@ -2,23 +2,23 @@
 
 ## http1.1
 
-- 长链接、断点续传，管线化
+- 长链接、管线化、断点续传
 
-引入了持久链接，即 TCP 默认不关闭，可以被多个请求复用
-引入管道机制，一个 TCP 连接，可以同时发送多个请求，浏览器一般是 6 个
-新增了一些缓存的字段
-新增了一些方法，PUT、DELETE、OPTIONS、PATCH
-支持断点续传，通过请求头字段 Rang 来实现
+长链接(持久链接): connection：keep-alive 即 TCP 默认不关闭，可以被多个请求复用，建立tcp 连接三次握手->请求响应请求响应->四次挥手
+管道机制：一个 TCP 连接，可以同时发送多个请求，浏览器一般是 6 个，请求1请求2请求3->响应123
+断点续传: 通过请求头字段 content-range=bytes=0-9 来实现 206 
+缓存: 新增了一些缓存的字段 catch-control
+方法: 新增了一些方法，PUT、DELETE、OPTIONS、PATCH
 
 ## http2
 
 > http2 建立在 https 基础之上
 
-- 分帧传输，又上下文联系，进行组合，并发送数据（二进制传输，头信息和数据体都是二进制）
+- 头部压缩：HPACK
+- 分帧传输: 有上下文联系，进行组合，并发送数据（二进制传输，头信息和数据体都是二进制），解决头部拥塞问题
+- 多路复用（信道复用）: 只开启一个 tcp 链接
 - 服务器主动推送消息（server push）
-- 请求优先级， 设置数据帧的优先级，让服务器优先处理
-- 多路复用（信道复用）
-- 头部压缩
+- 请求优先级: 设置数据帧的优先级，让服务器优先处理
 
 ## http3
 
@@ -31,7 +31,10 @@
 
 ## 管道机制会造成什么样的问题，http2.0 是怎么解决的
 
-头部拥塞，多路复用，分帧传输，进行组合
+头部拥塞：HTTP 传输是基于请求-应答的模式进行的，报文必须是一发一收，里面的任务被放在一个任务队列中串行执行，一旦队首的请求处理太慢，就会阻塞后面请求的处理
+
+二进制帧没有先后关系
+多路复用，分帧传输，进行组合
 
 ## 头部压缩的原理是什么
 
