--- a/面试题/js/16.ES6 中 Reflect 对象，它什么优点.md
+++ b/面试题/js/16.ES6 中 Reflect 对象，它什么优点.md
@@ -63,3 +63,32 @@ var loggedObj = new Proxy(cat, {
 
 console.log((loggedObj["value"] = "123"));
 ```
+
+## receiver
+receiver的作用是 如果我们的源对象（obj）有setter,getter的访问器属性，那么可以通过receiver来改变里面的this
+```js
+const obj = {
+  _name: 'xwl',
+  get name() {
+    //相当于objProxy._name,再一次通过Proxy创建的代理
+    return this._name
+  },
+  set name(newValue) {
+    this._name = newValue
+  }
+}
+
+const objProxy = new Proxy(obj, {
+  // receiver是创建出来的代理对象
+  get(target, key, receiver) {
+    console.log('get的操作触发了')
+    return Reflect.get(target, key, receiver)
+  },
+  set(target, key, newValue, receiver) {
+    console.log('set的操作触发了')
+    Reflect.set(target, key, newValue, receiver)
+  }
+})
+// objProxy.name = 'xxx'
+console.log(objProxy.name)
+```
