--- a/面试题/css/2.flex.md
+++ b/面试题/css/2.flex.md
@@ -9,15 +9,20 @@ align-content: flex-start;
 
 ## 项目属性
 
-flex: 0 1 auto; 不放大、要缩小 默认
+flex: initial (0,1,auto) 不放大、要缩小 默认
 flex: auto(1 1 auto); 又放大、又缩小
-flext: none(0,0,auto); 不放大、不缩小
-flex: 放大 缩小
+flex: none(0,0,auto); 不放大、不缩小
+flex: 1(1 1 0%); (取值为非负数字) ==>(赋值在第一位，后两位是固定的1 ，0%)
+flex: 0(0 1 0%)
+
 align-self: 覆盖父亲的 align-item, 定义单个 align-self
 order: 排序值越小越靠前
 
-## flex: 1
-是它的缩写 flex: 1 1 0%;
+flex: 0  最小内容宽度 都是0
+flex: none 适用于不换行的内容固定或者较少的小控件元素
+flex: auto 适合基于内容动态适配的布局；最大内容宽度， 按照自己的宽度计算宽度
+flex: 1 适合等分布局
+区别：https://juejin.cn/post/7061196914741477383#heading-7
 
 ```html
 <!DOCTYPE html>
@@ -131,3 +136,9 @@ https://mp.weixin.qq.com/s/is1ANAImt0WChsX8K2iyww
 = item0: 50
 = item1: 50 + 300*1/8= 87.5
 = item2: 100 + 300*7/8= 362.5
+
+
+## 放大情况
+https://juejin.cn/post/6932370503575617543
+0% 对应0 宽度
+auto 对应 width 宽度
