--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -15,21 +15,21 @@
 - ✅ 12.事件机制捕获、冒泡
 - ✅ 13.JS 中通过 `bind` 绑定的方法，再使用 `apply` 或 `call` 会改变它的 `this` 吗，几个原理
 - ✅ 14.事件循环
-- ✅ 15.实现 reduce foreach, forEach与for循环，谁的性能更好
+- ✅ 15.实现 reduce foreach, forEach 与 for 循环，谁的性能更好
 
 - ✅ 16.ES6 中 Reflect 对象，它什么优点
 - ✅ 17.JS 中有哪些方法可以实现继承
 - ✅ 18.深拷贝和浅拷贝
 - ✅ 19.JS 垃圾回收和 v8 的垃圾回收机制有什么区别
-- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗 
+- ✅ 20.设计模式了解应用，发布订阅模式, 单例模式，保证只有给弹窗，当一个弹窗打开的时候，关闭其他弹窗
 
 - ✅ 21.ajax fetch axios 区别，ajax 实现原理, axios 原理是什么
 - ✅ 22.不用 promise, 那些可实现 promise generator🌟
 - ✅ 23.Promise 原理、方法，promise race all allsetted🌟
 - ✅ 24.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
-- 25.防抖和节流应用场景🌟🌟
+- 25.防抖和节流应用场景 🌟🌟
 - ✅ 26.new 操作符, 构造函数和普通函数区别, 函数有 return 返回什么
-- 27.什么是作用域链，执行上下文，预编译🌹
+- 27.什么是作用域链，执行上下文，预编译 🌹
 - ✅ 28.[]+{}
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
@@ -39,7 +39,7 @@
 - ✅ 34.a===1&&a===2&&a===3 为 true
 - ES6 中 set、map、weakMap 的区别, Set 的用法，用 Set 实现数组去重
 - 模块化发展历史
-- var 怎么实现let
+- var 怎么实现 let
 - 进程通信的几种方式
 - isNaN 和 number.isNaN 区别
 - 二进制
@@ -70,7 +70,7 @@
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - ✅ 4.输入 url 到看到页面发生了什么
 
-- 盒子模型、怪异模型、IE模型
+- 盒子模型、怪异模型、IE 模型
 - box-sizing
 - 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
 - 浏览器通信：两个标签页想要共享 sessionStorage 的数据，如何做呢
@@ -94,10 +94,9 @@
 - ✅ 14.css3 属性
 - ✅ 15.css 中的 px，rem，em，vw，vh
 - ✅ 16.伪元素 ::before 与伪类 :first-child 的区别
-box-sizing 宽高计算
-为什么 marign 0 auto 无法垂直居中
-控制 z-index 的规则有哪些
-元素替换概念有了解吗？
+- ✅ 17.为什么 marign 0 auto 无法垂直居中
+- ✅ 18.z-index
+- ✅ 19.元素替换
 
 # TS
 
@@ -120,9 +119,9 @@ box-sizing 宽高计算
 - ✅ 9.Vue.minxins 做过什么功能，mixins.js 和 组件中生命周期函数执行顺序，以及选项合并策略
 - ✅ 10.compiler diff 原理
 - ✅ 11.vue-router
-- computed和watch的区别
+- computed 和 watch 的区别
 - Vue2 和 Vue3 区别
-- computed的底层原理
+- computed 的底层原理
 
 # webpack
 
@@ -214,7 +213,6 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 https://www.yuque.com/zaotalk/interview/iv3pyp#ehMC
 http://muyiy.cn/question/js/2.html
 https://juejin.cn/post/7028478428680552456#heading-40
-
 
 - [飞书](https://m26bxrpatp.feishu.cn/base/appcn5mUun8tTLsaFG0jrTeUnBg?table=tbllAUETZhGVTWMA&view=vewJHSwJVd)
 
