--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -37,11 +37,10 @@
 - 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数 大数、小树
 - ✅ 33 RAF 和 RIC 是什么
 - ✅ 34.a===1&&a===2&&a===3 为 true
-- ES6 中 set、map、weakMap 的区别, Set 的用法，用 Set 实现数组去重
-- 模块化发展历史
+- ✅ 35. isNaN 和 number.isNaN 区别
+- 36.模块化发展历史
 - var 怎么实现 let
 - 进程通信的几种方式
-- isNaN 和 number.isNaN 区别
 - 二进制
 - 随机数
 - 位运算
@@ -61,6 +60,7 @@
 - ✅ 10.TCP 和 UDP 区别是什么
 - ✅ 11.谈谈你对 dns-prefetch 的理解
 - ✅ 12.TCP 滑动窗口、重试机制
+- ✅ 13.Conent-Type;
 - 滑动阻塞、慢重传、快重传
 
 # 浏览器
