--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -34,15 +34,13 @@
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
 - ✅ 31.柯里化
-- 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数 大数、小树
+- ✅ 32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数 大数、小树
 - ✅ 33 RAF 和 RIC 是什么
 - ✅ 34.a===1&&a===2&&a===3 为 true
-- ✅ 35. isNaN 和 number.isNaN 区别
-- 36.模块化发展历史
-- var 怎么实现 let
+- ✅ 35.isNaN 和 number.isNaN 区别
+- ✅ 36.随机数
+- ✅ 37.正则
 - 进程通信的几种方式
-- 二进制
-- 随机数
 - 位运算
 
 # HTTP
