--- a/面试题/js/29.模块化.md
+++ b/面试题/js/29.模块化.md
@@ -4,14 +4,15 @@
 
 - 命名空间冲突
 - 模块复用
+- 提高代码可维护性
 
-CommonJS
+## CommonJS
 
 - Node.js 是基于 CommonJS 来实现的，同步导入文件，
 - 是值的导出，后面值发生变化需要重新导入
 - 运行时加载
 
-ESModule 是引用的导出
+## ESModule 是引用的导出
 
 - 编译时输出
 - export default 默认导出是一个值，export { a } 批量导出是一个地址
@@ -43,7 +44,6 @@ b.add()
 
 defined(function(require, exports, module){
 var a = require('a');
-
 })
 
 # export
