--- a/面试题/js/32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数.md
+++ b/面试题/js/32.0.1 + 0.2 !== 0.3，如何解决上面说的精确度丢失问题，number 最大数.md
@@ -5,43 +5,48 @@
 ## 怎么解决
 
 - 解决小数问题，但是带来一个新问题，大数之和
+
 ```js
 function add(num1, num2) {
- const num1Digits = (num1.toString().split('.')[1] || '').length; // 小数点后面有几位
- const num2Digits = (num2.toString().split('.')[1] || '').length;
+  const num1Digits = (num1.toString().split(".")[1] || "").length; // 小数点后面有几位
+  const num2Digits = (num2.toString().split(".")[1] || "").length;
 
- // 小数点后面有几位选择最大值 例如2，则 baseNum = 10 * 10 * 10
- const baseNum = Math.pow(10, Math.max(num1Digits, num2Digits));
- 
- return (num1 * baseNum + num2 * baseNum) / baseNum;
+  // 小数点后面有几位选择最大值 例如2，则 baseNum = 10 * 10 * 10
+  const baseNum = Math.pow(10, Math.max(num1Digits, num2Digits));
+
+  return (num1 * baseNum + num2 * baseNum) / baseNum;
 }
-add(0.1, 0.2)
+add(0.1, 0.2);
 ```
 
 ## 判断两个小数是否相等
+
 ```js
-Number.EPSILON=(function(){   //解决兼容性问题
-  return Number.EPSILON ? Number.EPSILON : Math.pow(2,-52);
+Number.EPSILON = (function () {
+  //解决兼容性问题
+  return Number.EPSILON ? Number.EPSILON : Math.pow(2, -52);
 })();
 
-function numbersequal(a,b){  
-  return Math.abs(a-b) < Number.EPSILON;
+function numbersequal(a, b) {
+  return Math.abs(a - b) < Number.EPSILON;
 }
 
-//接下来再判断 
-var a=0.1+0.2, b=0.3;
-console.log(numbersequal(a,b));  //这里就为true了
+//接下来再判断
+var a = 0.1 + 0.2,
+  b = 0.3;
+console.log(numbersequal(a, b)); //这里就为true了
 ```
 
-## number 最大数
-- 安全数字范围 15位一下
+## Number 最大数
 
-- JavaScript 并不能表示任意位的整数，最大的整数是 Number.MAX_SAFE_INTEGER(9007199254740991)，最小的整数是N umber.MIN_SAFE_INTEGER(-9007199254740991)
+- 安全数字范围 15 位一下
 
-- 特别注意，很多ID是超出这个范围的，所以ID最好是用string，当ID超出15位数的话，就肯定要用字符串类型了。
+- JavaScript 并不能表示任意位的整数，最大的整数是 Number.MAX_SAFE_INTEGER(9007199254740991)，最小的整数是 Number.MIN_SAFE_INTEGER(-9007199254740991)
+
+- 特别注意，很多 ID 是超出这个范围的，所以 ID 最好是用 string，当 ID 超出 15 位数的话，就肯定要用字符串类型了。
 - 超出会失准
 
 ```js
-var a = 9007199254740995
+var a = 9007199254740995;
 a; // 9007199254740996
 ```
