--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -40,8 +40,8 @@
 - ✅ 35.isNaN 和 number.isNaN 区别
 - ✅ 36.随机数
 - ✅ 37.正则
-- 进程通信的几种方式
 - 位运算
+- 进程通信的几种方式
 
 # HTTP
 
@@ -67,6 +67,7 @@
 - ✅ 2.defer
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - ✅ 4.输入 url 到看到页面发生了什么
+- ✅ 5.跨域
 
 - 盒子模型、怪异模型、IE 模型
 - box-sizing
@@ -95,6 +96,7 @@
 - ✅ 17.为什么 marign 0 auto 无法垂直居中
 - ✅ 18.z-index
 - ✅ 19.元素替换
+- ✅ 20.画一个三角形
 
 # TS
 
