--- a/面试题/css/16.伪元素 ::before 与伪类 :first-child 的区别.md
+++ b/面试题/css/16.伪元素 ::before 与伪类 :first-child 的区别.md
@@ -35,3 +35,7 @@ input.placeholder::placeholder{
 
 ## 区别
 核心区别是否创造了“新的元素”
+
+表示: (伪类用 : 表示)、(伪元素用 :: 表示)，因为兼容性问题，都用一个冒号表示:
+伪元素: 假元素之存在于 css 中; 不存在于 DOM 树的虚拟元素 ::before ::after
+伪类: 元素的某种状态 nth-child(2n) :selection :checked :disabled  :hover :first-child
