--- a/面试题/HTTP/8.DNS 寻址过程.md
+++ b/面试题/HTTP/8.DNS 寻址过程.md
@@ -1,11 +1,12 @@
 # DNS 寻址过程
 
-域名服务 Domain Name Systemk, 
+域名服务 Domain Name Systemk,
 
 - 找浏览器缓存
-- 操作系统缓存，host
-- 路由缓存
-- 互联网服务器提供商（ISP）本地 DNS(LDNS),缓存中查找，命中返回，没命中递归查询
+- 操作系统缓存会对 DNS 解析结果做缓存
+- host
+- 路由内置 DNS 缓存 或者 配置的 DNS 服务器 0.0.0.0、8.8.8.8
+- 互联网服务器提供商（ISP）本地 DNS(LDNS), 缓存中查找，命中返回，没命中递归查询
   (主机名.次级域名.顶级域名.根域名)
 
   - 从根域名(.)查到顶级域名(com)
@@ -23,9 +24,11 @@
 本地 dns 服务端---外网：这部分属于迭代查询
 
 ## DNS 为什么快
-无连接UPD, 每一步都有缓存
+
+无连接 UPD, 每一步都有缓存
 
 ## 几级域名
+
 www.test.com 二级
 www.test.com.cn 三级
 几个点就是几级
