--- a/面试题/HTTP/10.TCP 和 UDP 区别是什么.md
+++ b/面试题/HTTP/10.TCP 和 UDP 区别是什么.md
@@ -42,3 +42,18 @@ UDP 不能进行流量控制
 ## UDP 应用
 
 DNS DHCP
+
+## TCP 信号位
+
+ACK 确认
+PSH 发送
+RST 重发
+SYN 序号
+FIN 断开
+URG 紧急
+
+## TCP 问题
+
+- tpc 顺序问题造成的对头阻塞
+- 慢启动
+- time-wait 占用端口
