--- a/面试题/HTTP/12.TCP 滑动窗口、重试机制.md
+++ b/面试题/HTTP/12.TCP 滑动窗口、重试机制.md
@@ -1,8 +1,6 @@
-# TCP 滑动窗口、重试机制
-
 # 12.TCP 滑动窗口、重试机制
 
-# 滑动窗口
+## 滑动窗口
 
 我能接受多少数据，
 
@@ -45,3 +43,13 @@
 
 Nagle 任意时刻内， 只能有一个未被确认的小段
 cork 小包合并成一个， 一起发送
+
+## 拥塞窗口 cwnd
+
+- TCP 维护一个拥塞窗口 cwnd 变量，在传输过程中拥塞将此值增大，如果出现拥塞(超时重传 RTO)就将窗口值减少
+- cwnd < ssthresh 慢开始算法 指数 2 4
+- cwnd > ssthresh 拥塞避免算法 线性 16
+
+## 快重传
+
+发送过程中出现丢包情况，此时不要立即会退到慢开始阶段，而是对未收到的报文重复确认，如果确认次数到达 3 次，则立即进行重传 快恢复算法，减少超时重传机制的出现，降低重置 cwnd 的频率
