--- a/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
+++ b/面试题/HTTP/5.http1 和 http2 的区别， http2 做了那些改进，有哪些不足，http3 做了那些改进.md
@@ -2,27 +2,27 @@
 
 ## http1.1
 
-- 长链接、管线化、断点续传
+- 1999 长链接、管线化、断点续传
 
-长链接(持久链接): connection：keep-alive 即 TCP 默认不关闭，可以被多个请求复用，建立tcp 连接三次握手->请求响应请求响应->四次挥手
-管道机制：一个 TCP 连接，可以同时发送多个请求，浏览器一般是 6 个，请求1请求2请求3->响应123
-断点续传: 通过请求头字段 content-range=bytes=0-9 来实现 206 
+长链接(持久链接): connection：keep-alive 即 TCP 默认不关闭，可以被多个请求复用，建立 tcp 连接三次握手->请求响应请求响应->四次挥手
+管道机制：一个 TCP 连接，可以同时发送多个请求，浏览器一般是 6 个，请求 1 请求 2 请求 3->响应 123
+断点续传: 通过请求头字段 content-range=bytes=0-9 来实现 206
 缓存: 新增了一些缓存的字段 catch-control
 方法: 新增了一些方法，PUT、DELETE、OPTIONS、PATCH
 
 ## http2
 
-> http2 建立在 https 基础之上
+> 2015 年 http2 建立在 https 基础之上
 
-- 头部压缩：HPACK
+- 头部压缩：HPACK，http1.1 只压缩了 body 没有头
 - 分帧传输: 有上下文联系，进行组合，并发送数据（二进制传输，头信息和数据体都是二进制），解决头部拥塞问题
-- 多路复用（信道复用）: 只开启一个 tcp 链接
+- 多路复用（信道复用）: 一条 tcp 链接上可以乱序收发请求和响应。多个响应和请求不再有顺序关系。同域只开启一个 tcp 链接
 - 服务器主动推送消息（server push）
 - 请求优先级: 设置数据帧的优先级，让服务器优先处理
 
 ## http3
 
-> 基于 UDP, 添加了 QUIC 协议
+> 2018 年 基于 UDP, 添加了 QUIC 协议 实现可靠
 
 - 拥塞控制
 - 扩展了多路复用
