--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -41,7 +41,7 @@
 - ✅ 36.随机数
 - ✅ 37.正则
 - 38.位运算
-- 进程通信的几种方式
+- ✅ 39.进程通信的几种方式
 
 # HTTP
 
@@ -97,6 +97,7 @@
 - ✅ 18.z-index
 - ✅ 19.元素替换
 - ✅ 20.画一个三角形
+- 21.硬件加速
 
 # TS
 
