--- a/面试题/js/5.引用类型怎么存储，js 中的堆和栈有什么区别.md
+++ b/面试题/js/5.引用类型怎么存储，js 中的堆和栈有什么区别.md
@@ -4,18 +4,16 @@
 - 堆存放的是：真正值，
   我们将一个对象赋值给另一个对象，实际上是地址的赋值，地址对应的堆存放着真正的数值；
 
-# js 中的堆和栈有什么区别
-
 ## 栈 stack
 
-- 容量小速度快，书架，有序
+- 是什么：栈存放的是基础数据的数值，和引用类型的地址
+- 特点：
+  - 连续有序：栈空间连续，增加删除只需要移动指针，操作速度很快
+  - 空间有限：栈满了会抛错
+- 何时创建：执行函数时创建，函数执行完毕，栈就会笑会
 - 应用场景：push pop
 
 ## 堆 heap
 
-- 容量大，书堆无序，使用灵活，存取慢
-
-## 堆栈
-
-- 栈存放的是基础数据的数值，和引用类型的地址
-- 堆存放的是，引用类型的真正数值
+- 是什么：堆用于存储 js 中的引用类型
+- 特点：容量大，不连续，使用灵活存储操作慢。不需要连续空间，或则会申请内容较大
