--- a/面试题/js/8.闭包.md
+++ b/面试题/js/8.闭包.md
@@ -3,7 +3,10 @@
 - 有权访问另一个函数作用域中的变量的函数
 - 函数 A 内部有函数 B， B 可以访问到函数 A 变量，那么函数 B 就是闭包
 
+存储在堆中
+
 ## 产生闭包
+
 ```js
 function fn() {
   var mty = 10;
@@ -20,6 +23,7 @@ function fn() {
 ## 应用场景
 
 > 访问私有方法和变量
+
 - return 返回函数：无网、音量检测：调用之后，返回销毁方法、无网、音量
 - 柯里化: 函数可以分多次调用，从而得到结果，设置私有变量
 - bind：暂存 this context
@@ -101,7 +105,7 @@ var div = getId("div1");
 
 ```js
 // 拿到待删除节点:
-var self = document.getElementById('to-be-removed');
+var self = document.getElementById("to-be-removed");
 // 拿到父节点:
 var parent = self.parentElement;
 // 删除:
@@ -110,8 +114,8 @@ removed === self; // true
 ```
 
 # 为什么不创建一个全局变量来代替这个局部变量？
+
 - 因为全局变量会被污染或者被修改。
 - 闭包能够访问里面的变量，是由于作用域链，用到了函数嵌套中，内部函数能够访问父级函数作用域的变量这个理念。
-
 
 # 内存泄漏排查
