--- a/面试题/css/2.flex.md
+++ b/面试题/css/2.flex.md
@@ -12,13 +12,13 @@ align-content: flex-start;
 flex: initial (0,1,auto) 不放大、要缩小 默认
 flex: auto(1 1 auto); 又放大、又缩小
 flex: none(0,0,auto); 不放大、不缩小
-flex: 1(1 1 0%); (取值为非负数字) ==>(赋值在第一位，后两位是固定的1 ，0%)
+flex: 1(1 1 0%); (取值为非负数字) ==>(赋值在第一位，后两位是固定的 1 ，0%)
 flex: 0(0 1 0%)
 
 align-self: 覆盖父亲的 align-item, 定义单个 align-self
 order: 排序值越小越靠前
 
-flex: 0  最小内容宽度 都是0
+flex: 0 最小内容宽度 都是 0
 flex: none 适用于不换行的内容固定或者较少的小控件元素
 flex: auto 适合基于内容动态适配的布局；最大内容宽度， 按照自己的宽度计算宽度
 flex: 1 适合等分布局
@@ -90,55 +90,56 @@ flex: 1 适合等分布局
 https://mp.weixin.qq.com/s/is1ANAImt0WChsX8K2iyww
 
 ## 缩小情况
-公式1:-  自身的基础宽度 - 超出宽度 *(自身宽度*收缩比例/总权重）
-其中总权重计算方式： 300 * 2 + 200 * 1 + 100 * 2 = 10000
+
+公式 1:- 自身的基础宽度 - 超出宽度 *(自身宽度*收缩比例/总权重）
+其中总权重计算方式： 300 _ 2 + 200 _ 1 + 100 \* 2 = 10000
 
 = 300-200*300*2/1000 = 180
 = 200-200*200*1/1000 = 160
 = 100-200*100*2/1000 = 60
 
-
 ## 放大情况
+
 ```html
-   <style>
-    .item {
-      display: flex;
-      width: 500px;
-      height: 100px;
-    }
-    .item0 {
-      width: 50px;
-      flex: none;
-      background-color: red;
-    }
-    .item1 {
-      flex: 1 1 50px;
-      background-color: green;
-    }
-    .item2 {
-      flex: 7 1 100px;
-      background-color: blue;
-    }
-  </style>
-  <body>
-    <div class="item">
-        <div class="item0">0</div>
-        <div class="item1">1</div>
-        <div class="item2">2</div>
-    </div>
+<style>
+  .item {
+    display: flex;
+    width: 500px;
+    height: 100px;
+  }
+  .item0 {
+    width: 50px;
+    flex: none;
+    background-color: red;
+  }
+  .item1 {
+    flex: 1 1 50px;
+    background-color: green;
+  }
+  .item2 {
+    flex: 7 1 100px;
+    background-color: blue;
+  }
+</style>
+<body>
+  <div class="item">
+    <div class="item0">0</div>
+    <div class="item1">1</div>
+    <div class="item2">2</div>
+  </div>
 </body>
 ```
 
-公式：自身的基础宽度 + 容器剩余宽度 *（自身伸张比例 / 所有子项伸张比例之和）
-其中总权重计算方式： 300 * 2 + 200 * 1 + 100 * 2 = 10000
+公式：自身的基础宽度 + 容器剩余宽度 _（自身伸张比例 / 所有子项伸张比例之和）
+其中总权重计算方式： 300 _ 2 + 200 _ 1 + 100 _ 2 = 10000
 
 剩余宽度： 500-200 = 300
 = item0: 50
 = item1: 50 + 300*1/8= 87.5
 = item2: 100 + 300*7/8= 362.5
 
-
 ## 放大情况
+
 https://juejin.cn/post/6932370503575617543
-0% 对应0 宽度
+0% 对应 0 宽度
 auto 对应 width 宽度
