--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -69,10 +69,7 @@
 - ✅ 3.浏览器安全方面做了哪些， xss 工具方式是怎样，如何做，前端在 XSS、XSF 防御是如何做的
 - ✅ 4.输入 url 到看到页面发生了什么
 - ✅ 5.跨域
-
-- 盒子模型、怪异模型、IE 模型
-- box-sizing
-- 跨域的解决方案，abc 三个域名 localstorage 共享，个二级域名不同 cookie 怎么传输，跨页面传输数据有哪些方式
+- ✅ 6.onload 和 DOMContentLoaded 的区别
 - 浏览器通信：两个标签页想要共享 sessionStorage 的数据，如何做呢
 - Echarts 渲染内核有哪些模式？canvas 和 svg 的区别
 
@@ -98,7 +95,9 @@
 - ✅ 18.z-index
 - ✅ 19.元素替换
 - ✅ 20.画一个三角形
-- 21.硬件加速
+- ✅ 21.硬件加速
+- ✅ 22.选择优先级
+- ✅ 23.inline-block 间隙根本原因
 
 # TS
 
