--- a/面试题/HTTP/9.get 和 post 有什么区别.md
+++ b/面试题/HTTP/9.get 和 post 有什么区别.md
@@ -19,7 +19,7 @@ POST
 触发预检请求的三类条件：
 条件一：默认情况下，跨域请求只支持 GET,HEAD,POST 方法，如果不是这三个请求方法（比如：PUT、DELETE、CONNECT、OPTIONS、TRAC...将触发预检请求
 
-条件二：默认情况下，浏览器跨域请求时，会自动添加的请求头（HOST,Referer,Connection、Accept、User-Agent,Accept-Languange,Accept-Encoding,Accept-Charset 和 Content-Type）,这些请求中还有其他请求头时，那么将触发预检请求。
+条件二：默认情况下，浏览器跨域请求时，会自动添加的请求头（HOST,Referer,Connection、Accept、User-Agent,Accept-Language,Accept-Encoding,Accept-Charset 和 Content-Type）,这些请求中还有其他请求头时，那么将触发预检请求。
 
 条件三：浏览器支持的 Content-Type 值为 application/x-www-form-urlencoded，multipart/form-data 和 text/plain。如果是其他数据类型(如 application/json,text/xml...)，那么将触发预检请求。
 
