--- a/面试题/css/21.硬件加速.md
+++ b/面试题/css/21.硬件加速.md
@@ -1,5 +1,5 @@
 # 硬件加速
-又叫 GPU 加速， 创建独立的复合图层，让GPU来渲染这个图层，不会出发重绘，从而提高性能
+又叫 GPU 加速， 创建独立的复合图层，让GPU来渲染这个图层，不会触发重绘，从而提高性能
 
 ## 触发属性有
 transform filter opacity
