--- a/面试题/css/6.BFC 应用、盒子模型.md
+++ b/面试题/css/6.BFC 应用、盒子模型.md
@@ -50,3 +50,11 @@
 - 1、浮动父容器没高度：浮动元素也参与高度计算，父容器 float: left; 或者 overflow: hidden; table: table-cell
 - 2、垂直方向重叠：创建两个 BFC, overflow: hidden; 或者 display: inline-block;
 - 3、BFC 区域不会与浮动元素的 box 重叠
+
+
+## 清除浮动
+> 浮动元素脱离文档流，导致父元素管不了，父元素高度坍塌问题
+  - 父级也设置 浮动、设置高度、父级增加 定位 position: absolute
+  - overflow:hidden
+  - 末尾增加空元素进行clear clear: both
+  - 给父级添加伪元素进行clear
