--- a/面试题/手写/12.compose-版本.md
+++ b/面试题/手写/12.compose-版本.md
@@ -99,7 +99,7 @@ function compose(...fn) {
     return fn.reduceRight((prev, next) => {
       // prev = fn1(...args), next = fn2, return fn2(fn1(...args))
       // prev = return fn2(fn1(...args)), next = fn3, return fn3(fn2(fn1(...args)));
-      return next(pre);
+      return next(prev);
     }, lastFn(...args));
   };
 }
