--- a/面试题/js/27.什么是作用域链，执行上下文.md
+++ b/面试题/js/27.什么是作用域链，执行上下文.md
@@ -38,7 +38,7 @@ function one() {
   two();
 }
 var a = 1;
-one(); 
+one();
 
 // -----
 // 1
@@ -63,7 +63,7 @@ function sum(a, b) {
   };
   a();
 }
-sum(1, 2); 
+sum(1, 2);
 
 // 打印2
 ```
@@ -129,3 +129,59 @@ variableEnvironment
 laxicalEnvironment
 
 let 声明变量会放到 词法环境中，其中一个 {} 为一个块，遇到一个 {} 创建一个词法作用域
+
+# 词法环境
+
+## 可执行代码类型
+
+- 全局代码、eval、函数 会创建新的执行上下文，执行上下文又叫执行环境 Execution Context
+- 一个执行上下文中包含多个词法环境
+
+## 词法环境 laxicalEnvironment
+
+- ES6 没出来之前 词法环境=变量环境
+- 放 let const 声明的变量 和 函数
+
+- 创建：全局函数、函数声明、whit、 try catch，类似代码执行的时候有词法环境
+- 构成：环境记录项+outer(可能外空的外部词法环境)
+
+## 变量环境 variableEnvironment
+
+- 放 var 声明的变量
+
+## 环境记录项
+
+- 都是记录环境里面的变量
+- 声明式环境记录项
+
+```js
+var a = 1;
+var b = 3;
+function test() {}
+```
+
+- 对象式环境记录项
+
+```js
+var whileObj = { a: 1, b: 2 };
+with (whileObj) {
+  console.log(a, b);
+}
+```
+
+## 执行环境 & 执行上下文 Execution Context
+
+- 代码执行的时候创建，执行栈 ECStack
+- 一个函数执行，只有一个变量环境，但是有多个词法环境，词法环境在执行的时候可能发生变化
+- 变量环境组件永远不变，词法环境组件有可能变
+
+## 函数作用域 scope
+
+- 函数创建的时候, 会确定它的作用域，指向当前创建的词法环境(需要 outer,形成作用域链)
+- 它本质是，执行上下文中的词法环境或者变量环境对象
+- 函数形参直接赋值，本身就在顶部
+
+## 其他
+
+- 编译阶段：分词、词法解析、ast、确定作用域
+- 静态作用域，创建的时候决定，跟在哪执行没关系
