--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -29,7 +29,7 @@
 - ✅ 24.为什么原生的 form 表单提交没有跨域问题（form 请求和 ajax 请求有什么不同）
 - ✅ 25.防抖和节流应用场景
 - ✅ 26.new 操作符, 构造函数和普通函数区别, 函数有 return 返回什么
-- 27.什么是作用域链，执行上下文，预编译、词法环境 🌹
+- 27.什么是作用域链、执行上下文、词法环境 🌹
 - ✅ 28.[]+{}
 - ✅ 29.模块化
 - ✅ 30.箭头函数于普通函数区别
