--- a/面试题/js/27.什么是作用域链、执行上下文、词法环境.md
+++ b/面试题/js/27.什么是作用域链、执行上下文、词法环境.md
@@ -1,4 +1,4 @@
-# 执行上下文
+# 执行上下文 ES3
 
 每个函数执行的时候都会产生执行上下文
 执行上下文是一个对象，里面包含有变量对象(当前函数的变量 VO)，其中全局的 VO 又称 GO (全局的 GO 可以在任何地方访问),
@@ -122,6 +122,12 @@ function test() {
 # 严格模式 use strict
 
 非严格模式下是 window global, 严格模式下 undefined
+
+--- 豪华分割线 -----
+--- 豪华分割线 -----
+--- 豪华分割线 -----
+--- 豪华分割线 -----
+--- 豪华分割线 -----
 
 # 词法作用域
 
