--- a/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
+++ b/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
@@ -53,20 +53,25 @@ console.log(array);
 
 [['1', '2', '3'].map(parseInt) what & why](https://github.com/sisterAn/blog/issues/19)
 
-# 十进制互相转化
+# R 进制转化为十进制
 
-## 十进制转化二进制（8421）
+## 二进制转化十进制（8421）
 
 - 10 = 2^1 + 2^0 = 2
 - 11 = 2^1 _ 1 + 2^0 _ 1
+- 111.11 = 2^2 \* 1 + 2^1 \* 1 + 2^0 \* 1
+  [.]
+  1*2\-1 = 0.5
+  1*2\-2 = 0.25
+  = 7.75
 
-# 八进制 17 转化成 十进制 
+# 八进制 17 转化成 十进制
 
 parseInt("17", 8);
 
 - 17 = 8^1 _ 1 + 8^0 _ 7 = 8+7 = 15
 
-# 16进制 F 转化成 十进制
+# 16 进制 F 转化成 十进制
 
 parseInt("FXX123", 16); = 15
 
