--- a/面试题/js/38.位运算.md
+++ b/面试题/js/38.位运算.md
@@ -65,3 +65,17 @@ x >> y ===> x / 2 ^ y
 # 安全整数
 
 安全整数可以使用 JS 的内置方法 Number.isSafeInteger() 来验证
+
+# 记忆点
+
+- 基数 R，R 进制
+- 左移撑，右移除
+- 左右移都可去整
+- 原码 10 = 正数：0101，负数 1101
+- 正数：反码补码都是原码(自己)
+- 反码：负数反码符号为不变其他位置取反
+- 补码：末位+1 去掉最高位，1101 = 1010+1 = 1011
+  0000 0000 0000 0000 0000 0000 0000 1101
+  1
+- 补码反求源码：
+- 安全整数：Number.isSafeInteger(2\*\*53-1) true
