--- a/面试题/2021-07.md
+++ b/面试题/2021-07.md
@@ -43,6 +43,7 @@
 - 38.位运算
 - ✅ 39.进程通信的几种方式
 - ✅ 40.'use strict' 的作用是什么
+- ✅ 41.如何判断是 new 还是函数调用
 
 # HTTP
 
@@ -192,6 +193,9 @@ https://mp.weixin.qq.com/s/9ifXga_Z4Q51SJbLgr4fPQ
 - cicd 发布流程，前端做了什么
 - 如何解决跨域，cors，设置*后一直可以跨域吗，什么情况配*下不可以，如果配置是个域名，只返回个域名行吗
 - git merge rebase 区别
+- 聊 Web Workers 与 WebAssembly 技术
+- electron 有哪些进程
+- LRU
 
 # 小程序
 
@@ -221,3 +225,4 @@ https://juejin.cn/post/7028478428680552456#heading-40
 - [飞书](https://m26bxrpatp.feishu.cn/base/appcn5mUun8tTLsaFG0jrTeUnBg?table=tbllAUETZhGVTWMA&view=vewJHSwJVd)
 
 https://mp.weixin.qq.com/s/RJxR9Fsbv8oTl6GXWY4oaQ
+https://q.shanyue.tech/
