--- a/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
+++ b/面试题/js/1.['1', '2', '3'].map(parseInt) what & why.md
@@ -61,9 +61,21 @@ console.log(array);
 - 11 = 2^1 _ 1 + 2^0 _ 1
 - 111.11 = 2^2 \* 1 + 2^1 \* 1 + 2^0 \* 1
   [.]
-  1*2\-1 = 0.5
-  1*2\-2 = 0.25
+  1*2^-1 = 0.5
+  1*2^-2 = 0.25
   = 7.75
+
+# 二进制小数转十进制
+  0.11
+  1/2^1 = 0.5
+  1/2^2 = 0.25
+
+# 十进制小数转二进制
+小数乘 R 取整，顺序所得
+- 0.6875 * 2 = > 1.2
+- 0.2 * 2 = > 0.4
+= 0.10
+
 
 # 八进制 17 转化成 十进制
 
